[package]
name = "rust"
version = "0.1.0"
authors = ["kkaneda <canpasvista@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.5", default-features = false }
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4.13"